--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
 @layer base {
   :root {
     --background: 214 0 100%;
@@ -165,7 +177,7 @@
 
 .maplibregl-ctrl-top-right {
   right: 0;
-  top: 72px;
+  top: 120px;
 }
 
 .maplibregl-ctrl-bottom-left {
@@ -201,7 +213,7 @@
 
 .maplibregl-ctrl-bottom-right .maplibregl-ctrl {
   float: right;
-  margin: 0 10px 10px 0;
+  margin: 0 10px 120px 0;
 }
 
 .maplibregl-ctrl-group {
