--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,60 @@ body {
   overscroll-behavior-y: none;
 }
 
+.card {
+  max-width: 400px;
+  width: 100%;
+}
+
+.card .inner {
+  padding: 25px;
+  color: #fff;
+}
+
+.cards {
+  max-width: 800px;
+}
+
+.border-mix {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.border-mix .inner {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  margin: 5px;
+}
+
+.border-mix::before {
+  content: "";
+  display: block;
+  background: linear-gradient(
+    90deg,
+    hsla(var(--primary-500)) 0%,
+    hsla(var(--secondary-500)) 100%
+  );
+  height: 400px;
+  width: 400px;
+  position: absolute;
+  animation: rotate 8s linear infinite;
+  z-index: 0;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
@@ -31,9 +85,15 @@ body {
     --popover-foreground: 222.2 84% 4.9%;
 
     --primary: 268 100% 53%;
+    --primary-100: 268 100% 92%;
+    --primary-300: 268 100% 75%;
+    --primary-500: 268 100% 42%;
     --primary-foreground: 210 40% 98%;
 
-    --secondary: 42 100% 51%;
+    --secondary: 42 100% 52%;
+    --secondary-100: 42 100% 92%;
+    --secondary-300: 42 100% 75%;
+    --secondary-500: 42 100% 42%;
     --secondary-foreground: 268 100% 53%;
 
     --muted: 42 100% 51%;
