--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  touch-action: none;
+}
+
 body {
   overflow: hidden;
   overscroll-behavior-y: none;
