style: landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,24 @@ body {
   overscroll-behavior-y: none;
 }
 
+.gradient-background {
+  background: linear-gradient(139deg, #d61fc7, #72389f, #fecd71);
+  background-size: 180% 180%;
+  animation: gradient-animation 15s ease infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .border-mix {
   position: relative;
   overflow: hidden;
